# plugin-marketplace

./: CLAUDE.md  README.md  marketplace.json  skills-tracked.md
.claude-plugin/: marketplace.json
docs/: data.json  index.html
docs/.playwright-cli/: page-2026-03-11T15-13-11-828Z.yml
plugins/0juano/.claude-plugin/: plugin.json
plugins/0xbigboss/.claude-plugin/: plugin.json
plugins/0xdarkmatter/.claude-plugin/: plugin.json
plugins/0xdesign/.claude-plugin/: plugin.json
plugins/0xhubed/.claude-plugin/: plugin.json
plugins/0xindiebruh/.claude-plugin/: plugin.json
plugins/0xsardius/.claude-plugin/: plugin.json
plugins/1018466411/.claude-plugin/: plugin.json
plugins/12306/.claude-plugin/: plugin.json
plugins/analyzing-data/skills/analyzing-data/scripts/: pyproject.toml  templates.py
plugins/hello-world/: README.md
plugins/patrickporto/skills/desktop control/: README.md  pyproject.toml
plugins/patrickporto/skills/desktop control/.github/workflows/: release.yml
plugins/patrickporto/skills/desktop control/commands/: __init__.py  message.py  screen.py
plugins/patrickporto/skills/desktop control/desktop_agent/commands/: __init__.py  keyboard.py  screen.py
plugins/patrickporto/skills/desktop control/desktop_agent/specs/v1/: schema.json
plugins/patrickporto/skills/desktop control/desktop_agent/utils/: __init__.py  response.py
plugins/patrickporto/skills/desktop control/openspec/: project.md
plugins/patrickporto/skills/desktop control/openspec/changes/rename-to-desktop-agent/: design.md  proposal.md  tasks.md
plugins/patrickporto/skills/desktop control/openspec/changes/rename-to-desktop-agent/specs/package-distribution/: spec.md
plugins/ppx123-web/skills/wechat-article-fetcher/: README.md  pyproject.toml  skill.py  wechat_fetcher.py
plugins/ppx123-web/skills/wechat-article-fetcher/examples/: usage-scenarios.md
plugins/ppx123-web/skills/wechat-article-fetcher/references/: cli-usage.md
scripts/: generate-site.py  generate-toc.py  regroup-by-publisher.py  scrape-skills.py  sync-skills.py  trim-plugins.py
(+22715 files in other folders)
