[project]
name = "desktop-agent"
version = "1.3.1"
description = "AI agent skill for desktop automation using PyAutoGUI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Patrick Porto" }
]
keywords = ["desktop", "automation", "pyautogui", "ai", "agent", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pywinctl>=0.4.1",
    "typer>=0.21.1",
    "pydantic>=2.0.0",
]

[project.scripts]
desktop-agent = "desktop_agent:app_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desktop_agent"]
