[project]
name = "wechat-article-fetcher"
version = "1.0.0"
description = "WeChat official account article fetcher with intelligent ranking"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
wechat-fetcher = "skill:main"

[tool.setuptools]
py-modules = ["skill", "wechat_fetcher"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
